[gd_scene load_steps=8 format=3 uid="uid://rrfelqygal74"]

[ext_resource type="Script" path="res://scripts/items/melee/melee_weapon.gd" id="1_f70w5"]
[ext_resource type="PackedScene" uid="uid://cpn7k4c4xrttr" path="res://scenes/components/hitbox_component.tscn" id="2_kypyn"]

[sub_resource type="Animation" id="Animation_nhcqy"]
resource_name = "block"

[sub_resource type="Animation" id="Animation_hvns5"]
resource_name = "inverted_attack"

[sub_resource type="Animation" id="Animation_krfek"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_b3css"]
resource_name = "stab"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_32u23"]
_data = {
"block": SubResource("Animation_nhcqy"),
"inverted_slash": SubResource("Animation_hvns5"),
"slash": SubResource("Animation_krfek"),
"stab": SubResource("Animation_b3css")
}

[node name="MeleeWeapon" type="Node2D"]
script = ExtResource("1_f70w5")

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]

[node name="HitboxComponent" parent="Node2D" instance=ExtResource("2_kypyn")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/HitboxComponent"]

[node name="HandPosition2" type="Marker2D" parent="."]
gizmo_extents = 5.0

[node name="HandPosition1" type="Marker2D" parent="."]
gizmo_extents = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_32u23")
}
